# HurricaneProject

./: LICENSE  README.md  preprocessing.ipynb  pyproject.toml
reference/: MODELING.md  PREPROCESSING.md  VISUALIZATION.md
src/: categorical_classification.ipynb  classification.ipynb  forecasting.ipynb  path_prediction.ipynb  prediction.ipynb  preprocessing.ipynb  preprocessing_GridSearchCV.ipynb
src/data/: atlantic_post2003.csv  pacific_cleaned.csv  pacific_post2003.csv  predicted_path.csv
