[tool.poetry]
name = "hurricaneproject"
version = "0.1.0"
description = "A collaborative data-science project to predict and model hurricanes."
authors = ["Colin <colintiller21@gmail.com>", Valeria <sandovaldiazvm@appstate.edu>, Michael <araquem1@appstate.edu>]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.2"
numpy = "^1.26.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
keras = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
